<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">南农影视</string>
    <string name="hello_world">Hello world!</string>
    <string name="value_loading">Loading...</string>
	<string name="value_description">加载图标</string>
	<string name="rb_native_video">本地视频</string>
	<string name="rb_net_video">网络视频</string>
	<string name="rb_recommend_video">推荐</string>
	<string name="rb_vip_video">VIP专区</string>
	<string name="user_clicked_login">用户点击登陆的图片</string>
	<string name="top_logo">南农影视图标</string>
	<string name="tv_search">在线搜索</string>
	<string name="ic_tophistory_record">用户点击查看历史的图片</string>
	<string name="tv_nomiedia">没有发现视频...</string>
	<string name="back_btn"><![CDATA[<]]></string>

		
	<string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>
